@@ -11,3 +11,5 @@ Para la sd completa cuanto hace falta? Cuanto ocupa?
 
 O que se pueda pasar un estimado de tamaño a función de util_download
 
+-filtro de seleccion mmc al descargar image full de 2GB
+
